# SlicerCrossSegmentationExplorer

./: CMakeLists.txt  README.md
CrossSegmentationExplorer/: CMakeLists.txt  CrossSegmentationExplorer.py  SegmentationComparison.py
CrossSegmentationExplorer/Resources/UI/: CrossSegmentationExplorer.ui  SegModelsDialog.ui  SegmentationComparison.ui  SegmentationModelsDialog.ui
SegmentationComparison/: SegmentationComparison.py
SegmentationComparison/Resources/UI/: SegmentationComparison.ui
docs/TODO/: claude_review.md  copilot_review.md
